--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grunt": "0.4.5",
     "grunt-autoprefixer": "3.0.0",
     "grunt-bump": "0.3.1",
+    "grunt-cli": "0.1.13",
     "grunt-contrib-concat": "0.5.1",
     "grunt-contrib-connect": "0.10.1",
     "grunt-contrib-csslint": "0.4.0",
@@ -61,6 +62,7 @@
   "scripts": {
     "test": "grunt test --verbose",
     "test:ci": "grunt travis --verbose",
+    "build": "grunt js",
     "start": "open ./demo/index.html"
   }
 }
